test/trivial/shannon/readWriteEnum.good
Tuesday
readWriteEnum.chpl:6: error: Unhandled system error: bad format (1002)
