test/trivial/shannon/readWriteEnum.chpl
enum aramaic {mene, tekel, upharsin};
var onTheWall: aramaic;

read(onTheWall);
write(onTheWall);
write(" ");
read(onTheWall);
write(onTheWall);
write(" ");
read(onTheWall);
write(onTheWall);
write(" ");
read(onTheWall);
writeln(onTheWall);
read(onTheWall);
write(onTheWall);